--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -102,8 +102,12 @@
                     <div id="cartTotal">Total: $0.00</div>
                 </div>
                 <div class="cart-buttons">
-                    <button id="btnBorrar">Borrar</button>
-                    <button id="btnComprar">Comprar</button>
+                    <button id="btnLimpiar"  class="btnLimpiar">Limpiar</button>
+
+                    <a href="/comprar">
+
+                        <button id="btnComprar">Comprar</button>
+                    </a>
                 </div>
             </div>
         </div>
