--- a/src/main/resources/templates/html/comprar/comprar.html
+++ b/src/main/resources/templates/html/comprar/comprar.html
@@ -29,7 +29,7 @@
         }
     </style>
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="checkout.js" defer></script>
+    <script src="/js/checkout.js"></script>
 </head>
 <header class="p-3 bg-dark text-white fixed-top ">
     <div class="container">
@@ -124,14 +124,10 @@
     </div>
 </header>
 <body>
-    <div id="checkout">
 
-    </div>
-
-
-
-
-
+<div id="checkout">
+    <!-- Checkout will insert the payment form here -->
+</div>
 
 
 <div class="container" style="margin-top: 110px;">
