configurar lo de añadir al usuario

--- a/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
+++ b/src/main/resources/templates/html/adminMonitorizar/adminMeterFigura.html
@@ -121,10 +121,7 @@
             <h1>Añadir figuras</h1>
             <div class="btn-container">
                 <a href="/figuras/new" class="btn-dark-custom">Agregar Figura</a>
-              <!--  <a href="/figuras/novedad/new" class="btn-dark-custom">Agregar Novedad</a>
-                <a href="/figuras/dragonBall/new" class="btn-dark-custom">Agregar Dragon Ball</a>
-                <a href="/figuras/onePiece/new" class="btn-dark-custom">Agregar One Piece</a>
-                <a href="/figuras/naruto/new" class="btn-dark-custom">Agregar Naruto</a>-->
+
             </div>
         </div>
     </div>
@@ -132,6 +129,7 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
     <script src="/js/cambiarDeColorCabecera.js"></script>
+<script src="/js/borrarCokieSesion.js"></script>
 </body>
 
 </html>
