--- a/src/main/resources/templates/html/lista.html
+++ b/src/main/resources/templates/html/lista.html
@@ -13,23 +13,11 @@
     <link rel="stylesheet" href="/css/comprarCarrito.css">
     <link rel="stylesheet" href="/css/cambiarColoCabezera.css">
     <link rel="stylesheet" href="/css/figurasEstilosInicio.css">
+    <link rel="stylesheet" href="/css/fotosTamaño.css">
     <link rel="icon" href="/imagen/pestaña/corona.jpg">
 
-   <style>
 
 
-/*
-                body {
-                    background-image: url("https://wallpapers-clan.com/wp-content/uploads/2024/03/dragon-ball-goku-sparks-gif-preview-desktop-wallpaper.gif");
-                    background-size: cover; !* Asegura que la imagen cubra toda el área del fondo *!
-                    background-position: center; !* Centra la imagen *!
-                    background-repeat: no-repeat; !* Evita que la imagen se repita *!
-                    background-attachment: fixed; !* Hace que la imagen de fondo permanezca fija *!
-                    height: 100vh; !* Asegura que el cuerpo tenga al menos la altura de la ventana *!
-                    margin: 0; !* Elimina márgenes alrededor del cuerpo *!
-                }*/
-
-    </style>
 
 
 <body>
