--- a/src/main/resources/templates/html/naruto/index.html
+++ b/src/main/resources/templates/html/naruto/index.html
@@ -94,7 +94,7 @@
 
 
 <div class="contenedor">
-    <h1>Figuras</h1>
+    <h1>Figuras Naruto</h1>
     <div class="figura-contenedor">
         <div class="figura" th:each="figuraNaruto: ${listaNaruto}">
             <a th:href="@{/detalle/{id}(id=${figuraNaruto.id})}">
