--- a/src/main/resources/templates/html/novedad/index.html
+++ b/src/main/resources/templates/html/novedad/index.html
@@ -94,7 +94,7 @@
 
 
 <div class="contenedor" style="margin-top: 100px">
-    <h1>Novedades</h1>
+    <h1>Figuras de  Novedad</h1>
     <div class="figura-contenedor">
         <div class="figura" th:each="novedad: ${listaNovedad}">
             <a th:href="@{/detalle/{id}(id=${novedad.id})}">
