--- a/src/main/resources/templates/html/onePiece/index.html
+++ b/src/main/resources/templates/html/onePiece/index.html
@@ -95,7 +95,7 @@
 
 
 <div class="contenedor">
-    <h1>Figuras</h1>
+    <h1>Figuras One Piece</h1>
     <div class="figura-contenedor">
         <div class="figura" th:each="figuraOne: ${listaOnePiece}">
             <a th:href="@{/detalle/{id}(id=${figuraOne.id})}">
